Tests/SyntaxErrors/NilDereference.blz
:main
	print("test")
	a = {blz.nil}
	print(a.thing)	
end
