Tests/SyntaxErrors/NilDereference.err
Stack:
	<Process NilDereference.blz>
Error Occurred On Line 4
Could not find a value for thing
